style.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300&display=swap");
body {
  font-family: "Noto Sans SC", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow: hidden;
}
.container {
  text-align: center;
}
.logo {
  margin: 35vh auto 0;
  transform: translateY(-50%);
  vertical-align: middle;
  max-width: 33%;
}
.description {
  font-weight: 100;
  font-size: 2.3vw;
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.footer {
  font-size: 1.7vw;
  position: absolute;
  top: 94%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
}
hr {
  width: 90%;
  border-top: 0.5px solid black;
  margin-left: 4.7vw;
}
span {
  position: absolute;
}
.left {
  left: 2vw;
  bottom: 2.3vw;
}
.right {
  right: 2vw;
  bottom: 2.3vw;
}
a {
  text-decoration: none;
}
@media only screen and (max-width: 600px) {
  .description {
    top: 50%;
    font-size: 4vw;
  }
  .footer {
    font-size: 3.5vw;
  }
  hr {
    width: 80%;
    margin-left: 8.7vw;
  }
  .left {
    bottom: 4.7vw;
  }
  .right {
    bottom: 4.7vw;
  }
}
/* .jiggle {
  animation: jiggle 0.2s infinite;
}
@keyframes jiggle {
  0% {
    transform: rotate(-1deg);
  }
  50% {
    transform: rotate(1deg);
  }
} */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #262626;
    color: #f5f3ef;
  }
  a {
    color: #999999;
  }
}
@media (prefers-color-scheme: light) {
  body {
    background-color: transparent;
    color: #262626;
  }
  a {
    color: #666666;
  }
}

